--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -2,10 +2,42 @@
  * Global properties
  */
 
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+a {
+    color: black;
+}
+
+/* Footer */
+
+footer .row {
+    margin: 0;
+}
+
+
+/* Base page */
+
+.header-home-link {
+    text-align: center;
+}
+
+.header-home-link h1 {
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+
+/* Map page */
+
 .map-page #map {
     width: 100%;
     height: 500px;
 }
+
 
 
 /*
