--- a/livinglotsla/templates/_header.html
+++ b/livinglotsla/templates/_header.html
@@ -2,19 +2,18 @@
 
 <header id="page-header">
     <div class="visible-print" style="margin-left: 30px; margin-top: 15px; font-size: 30px; line-height: 30px;">
-        {{ project_name }}
+        LA Open Acres
+    </div>
+
+    <div class="header-home-link">
+        <a href="/">
+            <h1>{% trans "LA Open Acres" %}</h1>
+        </a>
     </div>
 
     <nav class="navbar navbar-default hidden-print" role="navigation">
 
         <div class="navbar-header">
-            <div class="header-home-link">
-                <a href="/">
-                    <img src="{% static "img/logo.png" %}" />
-                    <h1 style="display: none;">{% trans "LA Open Acres" %}</h1>
-                </a>
-            </div>
-
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
