--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -15,11 +15,42 @@ a {
 
 /* Header */
 
+header .row {
+    margin: 0;
+}
+
+.header-menu {
+    border-bottom: 1px solid #aaa;
+    border-top: 1px solid #aaa;
+}
+
+.header-tagline {
+    border-left: 1px solid #aaa;
+    border-right: 1px solid #aaa;
+    font-style: italic;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
+.navbar-default {
+    background-color: transparent;
+    border: none;
+    margin-bottom: 0;
+    min-height: 0;
+}
+
 .navbar-default .navbar-nav > li > a {
     color: black;
     font-weight: bold;
+    padding-bottom: 5px;
+    padding-top: 5px;
     text-decoration: none;
     text-transform: uppercase;
+}
+
+.navbar-collapse {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 
