--- a/livinglotsla/templates/_header.html
+++ b/livinglotsla/templates/_header.html
@@ -11,31 +11,32 @@
         </a>
     </div>
 
-    <nav class="navbar navbar-default hidden-print" role="navigation">
-
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+    <div class="header-menu row">
+        <div class="col-md-offset-1 col-md-3 header-tagline">
+            {% trans "Transforming vacant spaces into healthy places." %}
         </div>
 
-        <div class="collapse navbar-collapse navbar-main-collapse">
-            <ul class="nav navbar-nav">
-                {% feincms_nav feincms_page level=2 depth=1 as mainmenu %}
-                {% for page in mainmenu %}
-                    <li {% ifequal page feincms_page %}class="active"{% endifequal %}>
-                        <a href="{{ page.get_absolute_url }}">{{ page.title }}</a>
-                    </li>
-                {% endfor %}
-                {% if user.is_superuser %}
-                    <li>
-                        <a href="/extra-admin/">Admin</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
+        <nav class="col-md-8 navbar navbar-default hidden-print" role="navigation">
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+
+            <div class="collapse navbar-collapse navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    {% feincms_nav feincms_page level=2 depth=1 as mainmenu %}
+                    {% for page in mainmenu %}
+                        <li {% ifequal page feincms_page %}class="active"{% endifequal %}>
+                            <a href="{{ page.get_absolute_url }}">{{ page.title }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </nav>
+    </div>
 </header>
