--- a/livinglotsla/templates/_footer.html
+++ b/livinglotsla/templates/_footer.html
@@ -1,26 +1,13 @@
-{% load feincms_tags %}
+{% load feincms_tags i18n %}
 
 <footer>
-
     <div class="row">
-        <div class="footer-main col-md-8 col-md-offset-2">
-            {% feincms_render_region feincms_page "footer_main" request %}
+        <div class="footer-collaborator-links col-md-6 col-md-offset-1">
+            {% trans "A project of" %}:
+            <a href="http://www.chc-inc.org/">{% trans "Community Health Councils" %}</a> |
+            <a href="http://596acres.org/">596 Acres</a> |
+            <a href="http://c-lab.columbia.edu/">C-Lab</a> |
+            <a href="http://www.la2050.org/">LA 2050</a>
         </div>
     </div>
-
-    <div class="row">
-        <div class="footer-left col-md-4 col-md-offset-2">
-            {% feincms_render_region feincms_page "footer_left" request %}
-        </div>
-        <div class="footer-right col-md-4">
-            {% feincms_render_region feincms_page "footer_right" request %}
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="footer-bottom col-md-8 col-md-offset-2">
-            {% feincms_render_region feincms_page "footer_bottom" request %}
-        </div>
-    </div>
-
 </footer>
