--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -109,9 +109,25 @@ footer .row {
 }
 
 
-
 /*
  * Leaflet overrides
  */
 
+.leaflet-bar a,
+.leaflet-bar a:hover {
+    font-size: 30px;
+    height: 36px;
+    line-height: 36px;
+    width: 36px;
+}
 
+.leaflet-control {
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+}
+
+.leaflet-control a {
+    border: 0;
+    border-radius: 0 !important;
+}
