--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -72,6 +72,23 @@
     data-l-lot-centroids-url="{% url "lots:lot_geojson_centroid" %}"
     data-l-lot-polygons-url="{% url "lots:lot_geojson_polygon" %}"
 >
+    <div class="map-filters">
+        <span class="map-filters-expander">filter</span>
+        <section class="map-filters-content">
+            <section>
+                TYPE
+            </section>
+            <section>
+                SEARCH
+            </section>
+            <section>
+                FILTER BY
+            </section>
+            <section>
+                SIZE
+            </section>
+        </section>
+    </div>
 </div>
 
 {% comment %}
