--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -1,161 +1,131 @@
 /*
  * Global properties
  */
-
-*, *:before, *:after {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+*,
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 html,
 body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
-
 a {
-    color: black;
+  color: black;
 }
-
-
 /* Header */
-
 header .row {
-    margin: 0;
+  margin: 0;
 }
-
 .header-menu {
-    border-bottom: 1px solid #aaa;
-    border-top: 1px solid #aaa;
+  border-bottom: 1px solid #aaa;
+  border-top: 1px solid #aaa;
 }
-
 .header-tagline {
-    border-left: 1px solid #aaa;
-    border-right: 1px solid #aaa;
-    font-style: italic;
-    padding-bottom: 5px;
-    padding-top: 5px;
+  border-left: 1px solid #aaa;
+  border-right: 1px solid #aaa;
+  font-style: italic;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
-
 .navbar-default {
-    background-color: transparent;
-    border: none;
-    margin-bottom: 0;
-    min-height: 0;
+  background-color: transparent;
+  border: none;
+  margin-bottom: 0;
+  min-height: 0;
 }
-
 .navbar-default .navbar-nav > li > a {
-    color: black;
-    font-weight: bold;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    text-decoration: none;
-    text-transform: uppercase;
+  color: black;
+  font-weight: bold;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  text-decoration: none;
+  text-transform: uppercase;
 }
-
 .navbar-collapse {
-    padding-left: 0;
-    padding-right: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
-
-
 /* Footer */
-
 footer {
-    border-bottom: 1px solid #aaa;
-    border-top: 1px solid #aaa;
+  border-bottom: 1px solid #aaa;
+  border-top: 1px solid #aaa;
 }
-
 footer .row {
-    margin: 0;
+  margin: 0;
 }
-
 .footer-collaborator-links {
-    border-left: 1px solid #aaa;
-    border-right: 1px solid #aaa;
-    color: #aaa;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    text-transform: uppercase;
+  border-left: 1px solid #aaa;
+  border-right: 1px solid #aaa;
+  color: #aaa;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  text-transform: uppercase;
 }
-
 .footer-collaborator-links a {
-    color: black;
-    text-decoration: none;
-    text-transform: uppercase;
+  color: black;
+  text-decoration: none;
+  text-transform: uppercase;
 }
-
-
 /* Base page */
-
 .header-home-link {
-    text-align: center;
+  text-align: center;
 }
-
 .header-home-link h1 {
-    margin-bottom: 5px;
-    margin-top: 0;
-    padding-top: 5px;
+  margin-bottom: 5px;
+  margin-top: 0;
+  padding-top: 5px;
 }
-
-
 /* Map page */
-
 .map-page #map {
-    width: 100%;
-    height: 1000px;
+  width: 100%;
+  height: 1000px;
 }
-
 .map-filters {
-    background: rgba(256, 256, 256, .8);
-    left: 66.666666%;
-    padding: 5px;
-    position: relative;
-    width: 250px;
-    z-index: 5000;
+  background: rgba(255, 255, 255, 0.8);
+  left: 66.666666%;
+  padding: 5px;
+  position: relative;
+  width: 250px;
+  z-index: 5000;
 }
 .map-filters.expanded {
-    height: 100%;
+  height: 100%;
 }
-
 .map-filters-expander {
-    cursor: pointer;
-    font-size: 26px;
-    text-transform: uppercase;
+  cursor: pointer;
+  font-size: 26px;
+  text-transform: uppercase;
 }
-
 .map-filters-content {
-    display: none;
+  display: none;
 }
 .map-filters.expanded .map-filters-content {
-    display: block;
+  display: block;
 }
-
 /*
  * Leaflet overrides
  */
-
 .leaflet-bar a,
 .leaflet-bar a:hover {
-    font-size: 30px;
-    height: 36px;
-    line-height: 36px;
-    width: 36px;
+  font-size: 30px;
+  height: 36px;
+  line-height: 36px;
+  width: 36px;
 }
-
 .leaflet-control {
-    border: 0;
-    border-radius: 0;
-    box-shadow: none;
+  border: 0;
+  border-radius: 0;
+  box-shadow: none;
 }
-
 .leaflet-control a {
-    border: 0;
-    border-radius: 0 !important;
+  border: 0;
+  border-radius: 0 !important;
 }
-
 .leaflet-left {
-    margin-left: 8.33333333333333%;
+  margin-left: 8.33333333333333%;
 }
