More nesting where appropriate

--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -68,10 +68,10 @@ header .row {
 footer {
     border-bottom: @frame-border;
     border-top: @frame-border;
-}
 
-footer .row {
-    margin: 0;
+    .row {
+        margin: 0;
+    }
 }
 
 .footer-collaborator-links {
@@ -81,12 +81,12 @@ footer .row {
     padding-bottom: 5px;
     padding-top: 5px;
     text-transform: uppercase;
-}
 
-.footer-collaborator-links a {
-    color: black;
-    text-decoration: none;
-    text-transform: uppercase;
+    a {
+        color: black;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
 }
 
 
@@ -94,12 +94,12 @@ footer .row {
 
 .header-home-link {
     text-align: center;
-}
 
-.header-home-link h1 {
-    margin-bottom: 5px;
-    margin-top: 0;
-    padding-top: 5px;
+    h1 {
+        margin-bottom: 5px;
+        margin-top: 0;
+        padding-top: 5px;
+    }
 }
 
 
