--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -109,6 +109,31 @@ footer .row {
 .map-filters-content {
   display: none;
 }
+#lot-detail-map {
+  width: 100%;
+  height: 150px;
+}
+.lot-detail-streetview {
+  width: 100%;
+  height: 150px;
+}
+.lot-detail-page #page-wrapper.row {
+  margin: 0;
+}
+.lot-detail-page .content-wrapper {
+  padding-top: 10px;
+}
+.lot-detail-page h2 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  text-transform: uppercase;
+}
+.lot-detail-main-section {
+  border-top: 1px solid black;
+  margin-top: 25px;
+}
 /*
  * Overrides
  */
