--- a/livinglotsla/templates/base.html
+++ b/livinglotsla/templates/base.html
@@ -27,44 +27,45 @@
 
             {% include "_header.html" %}
 
-            <div id="page-wrapper-row" class="row">
+            <div id="page-wrapper" class="row">
 
-                <div id="page-wrapper" class="col-sm-10 col-sm-offset-1">
+                {% block pre_content %}{% endblock %}
 
-                    {% block pre_content %}{% endblock %}
+                <div class="content-wrapper clearfix">
 
-                    <div class="content-wrapper clearfix">
-                        <section id="main" class="{% block mainclasses %}col-sm-9{% endblock %}">
+                    {% block sidebar_left %}
+                    {% endblock %}
 
-                            {% block breadcrumbs_wrapper %}
-                                <ul class="breadcrumb">
-                                    {% block breadcrumbs %}
-                                        {% feincms_breadcrumbs feincms_page %}
-                                    {% endblock %}
-                                </ul>
-                            {% endblock %}
+                    <section id="main" class="{% block mainclasses %}col-sm-9{% endblock %}">
 
-                            {% block messages %}
-                                {% include "_messages.html" %}
-                            {% endblock %}
-
-                            <article>
-                                {% block content %}
-                                    <h1>{{ feincms_page.title }}</h1>
-                                    {% feincms_render_region feincms_page "main" request %}
+                        {% block breadcrumbs_wrapper %}
+                            <ul class="breadcrumb">
+                                {% block breadcrumbs %}
+                                    {% feincms_breadcrumbs feincms_page %}
                                 {% endblock %}
-                            </article>
-                        </section>
-
-                        {% block sidebar %}
-                            <aside id="aside-right" class="col-sm-3">
-                                {% feincms_render_region feincms_page "sidebar" request %}
-                            </aside>
+                            </ul>
                         {% endblock %}
 
-                    </div>
+                        {% block messages %}
+                            {% include "_messages.html" %}
+                        {% endblock %}
+
+                        <article>
+                            {% block content %}
+                                <h1>{{ feincms_page.title }}</h1>
+                                {% feincms_render_region feincms_page "main" request %}
+                            {% endblock %}
+                        </article>
+                    </section>
+
+                    {% block sidebar %}
+                        <aside id="aside-right" class="col-sm-3">
+                            {% feincms_render_region feincms_page "sidebar" request %}
+                        </aside>
+                    {% endblock %}
 
                 </div>
+
             </div>
 
             {% include "_footer.html" %}
