Make pages look okay by default

--- a/livinglotsla/templates/base.html
+++ b/livinglotsla/templates/base.html
@@ -36,7 +36,7 @@
                     {% block sidebar_left %}
                     {% endblock %}
 
-                    <section id="main" class="{% block mainclasses %}col-sm-9{% endblock %}">
+                    <section id="main" class="{% block mainclasses %}col-md-9 col-md-offset-1{% endblock %}">
 
                         {% block breadcrumbs_wrapper %}
                             <ul class="breadcrumb">
