--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -134,6 +134,17 @@ footer .row {
   border-top: 1px solid black;
   margin-top: 25px;
 }
+.note-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.note-list-item {
+  margin-top: 10px;
+}
+.note-text {
+  font-size: 24px;
+}
 /*
  * Overrides
  */
