--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -32,3 +32,19 @@
         margin-top: 25px;
     }
 }
+
+.note-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    
+    &-item {
+        margin-top: 10px;
+    }
+}
+
+.note {
+    &-text {
+        font-size: 24px;
+    }
+}
