--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -145,6 +145,17 @@ footer .row {
 .note-text {
   font-size: 24px;
 }
+.file-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.file-list-item {
+  margin-top: 10px;
+}
+.file-description {
+  font-size: 24px;
+}
 /*
  * Overrides
  */
