--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -48,3 +48,19 @@
         font-size: 24px;
     }
 }
+
+.file-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    
+    &-item {
+        margin-top: 10px;
+    }
+}
+
+.file {
+    &-description {
+        font-size: 24px;
+    }
+}
