--- a/livinglotsla/templates/files/file_list.html
+++ b/livinglotsla/templates/files/file_list.html
@@ -3,21 +3,22 @@
 <ul class="file-list">
     {% for file in files %}
         <li class="file-list-item">
-            <span class="file-added-by-name">
-                {{ file.added_by_name }}
-            </span>
-            {% trans "posted a file called" %}
-            <span class="file-title">
+            <div>
+                <span class="file-added">
+                    {{ file.added }}
+                </span>
+                <span class="file-added-by-name">
+                    {{ file.added_by_name }}
+                </span>
+            </div>
+            <div class="file-title">
+                {% trans "Download file" %}: 
                 <a href="{{ file.document.url }}">
                     {{ file.title }}
                 </a>
-            </span>
+            </div>
             <div class="file-description">
                 {{ file.description }}
-            </div>
-            <div class="file-added">
-                &mdash;
-                {{ file.added }}
             </div>
 
             {% if "files" in perms %}
