--- a/livinglotsla/templates/files/file_list.html
+++ b/livinglotsla/templates/files/file_list.html
@@ -6,7 +6,7 @@
             <div>
                 <span class="file-added">
                     {{ file.added }}
-                </span>
+                </span> |
                 <span class="file-added-by-name">
                     {{ file.added_by_name }}
                 </span>
