--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -64,3 +64,18 @@
         font-size: 24px;
     }
 }
+
+.photo-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    
+    &-item {
+        margin-top: 10px;
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+}
