--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -117,6 +117,9 @@ footer .row {
   width: 100%;
   height: 150px;
 }
+.lot-detail-streetview-error {
+  display: none;
+}
 .lot-detail-page #page-wrapper.row {
   margin: 0;
 }
