--- a/livinglotsla/static/css/pages/lot_detail.less
+++ b/livinglotsla/static/css/pages/lot_detail.less
@@ -6,6 +6,10 @@
 .lot-detail-streetview {
     width: 100%;
     height: 150px;
+
+    &-error {
+        display: none;
+    }
 }
 
 .lot-detail-page {
