Try to squeeze menu in

--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -36,7 +36,9 @@ header .row {
 .header-tagline {
     border-left: @frame-border;
     border-right: @frame-border;
+    font-size: 10px;
     font-style: italic;
+    line-height: 20px;
     padding-bottom: 5px;
     padding-top: 5px;
 }
@@ -44,15 +46,17 @@ header .row {
 .navbar-default {
     background-color: transparent;
     border: none;
+    font-size: 12px;
     margin-bottom: 0;
     min-height: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .navbar-default .navbar-nav > li > a {
     color: black;
     font-weight: bold;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    padding: 5px;
     text-decoration: none;
     text-transform: uppercase;
 }
