--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -28,21 +28,25 @@ header .row {
 .header-tagline {
   border-left: 1px solid #aaaaaa;
   border-right: 1px solid #aaaaaa;
+  font-size: 10px;
   font-style: italic;
+  line-height: 20px;
   padding-bottom: 5px;
   padding-top: 5px;
 }
 .navbar-default {
   background-color: transparent;
   border: none;
+  font-size: 12px;
   margin-bottom: 0;
   min-height: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 .navbar-default .navbar-nav > li > a {
   color: black;
   font-weight: bold;
-  padding-bottom: 5px;
-  padding-top: 5px;
+  padding: 5px;
   text-decoration: none;
   text-transform: uppercase;
 }
