--- a/livinglotsla/templates/_header.html
+++ b/livinglotsla/templates/_header.html
@@ -12,31 +12,35 @@
     </div>
 
     <div class="header-menu row">
-        <div class="col-md-offset-1 col-md-2 header-tagline">
-            {% trans "Transforming vacant spaces into healthy places." %}
+        <div class="col-md-offset-1 col-md-10">
+            <div class="row">
+                <div class="col-md-3 header-tagline">
+                    {% trans "Transforming vacant spaces into healthy places." %}
+                </div>
+
+                <nav class="col-md-6 navbar navbar-default hidden-print" role="navigation">
+
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+
+                    <div class="collapse navbar-collapse navbar-main-collapse">
+                        <ul class="nav navbar-nav">
+                            {% feincms_nav feincms_page level=2 depth=1 as mainmenu %}
+                            {% for page in mainmenu %}
+                                <li {% ifequal page feincms_page %}class="active"{% endifequal %}>
+                                    <a href="{{ page.get_absolute_url }}">{{ page.title }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </nav>
+            </div>
         </div>
-
-        <nav class="col-md-8 navbar navbar-default hidden-print" role="navigation">
-
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div>
-
-            <div class="collapse navbar-collapse navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    {% feincms_nav feincms_page level=2 depth=1 as mainmenu %}
-                    {% for page in mainmenu %}
-                        <li {% ifequal page feincms_page %}class="active"{% endifequal %}>
-                            <a href="{{ page.get_absolute_url }}">{{ page.title }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </nav>
     </div>
 </header>
