--- a/livinglotsla/templates/_header.html
+++ b/livinglotsla/templates/_header.html
@@ -40,6 +40,10 @@
                         </ul>
                     </div>
                 </nav>
+
+                <div class="col-md-3 header-search">
+                    <input type="search" placeholder="{% trans "search" %}" />
+                </div>
             </div>
         </div>
     </div>
