--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -28,19 +28,36 @@ header .row {
     margin: 0;
 }
 
-.header-menu {
-    border-bottom: @frame-border;
-    border-top: @frame-border;
-}
-
-.header-tagline {
+.header-bookend() {
     border-left: @frame-border;
     border-right: @frame-border;
-    font-size: 10px;
-    font-style: italic;
+    height: 100%;
     line-height: 20px;
     padding-bottom: 5px;
     padding-top: 5px;
+}
+
+.header {
+    &-menu {
+        border-bottom: @frame-border;
+        border-top: @frame-border;
+    }
+
+    &-search {
+        input {
+            border: 0;
+            width: 100%;
+        }
+        .header-bookend;
+
+
+    }
+
+    &-tagline {
+        .header-bookend;
+        font-size: 10px;
+        font-style: italic;
+    }
 }
 
 .navbar-default {
