--- a/livinglotsla/static/css/pages/map.less
+++ b/livinglotsla/static/css/pages/map.less
@@ -28,3 +28,27 @@
         display: none;
     }
 }
+
+.popup {
+    header {
+        font-size: 20px;
+
+        a {
+            color: black;
+            text-transform: uppercase;
+        }
+    }
+
+    .btn-learn-more {
+        background: purple;
+        border-radius: 30px;
+        color: white;
+        font-size: 10px;
+        height: 50px;
+        margin-top: 15px;
+        padding: 0;
+        padding-top: 10px;
+        text-align: center;
+        width: 50px;
+    }
+}
