--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -2,23 +2,23 @@
 
 <script id="popup-template" type="text/x-handlebars-template">
     {% verbatim %}
-        <section class="lotpopup">
+        <section class="popup">
             <header>
                 <a target="_blank" href="{{detailUrl}}">
                     {{feature.properties.address_line1}}
                 </a>
             </header>
-            <div class="row">
-                <div class="popup-streetview col-xs-6">
-                    <div>
-                        {{#if feature.properties.centroid}}
-                            <img src="http://maps.googleapis.com/maps/api/streetview?location={{feature.properties.centroid.[1]}},{{feature.properties.centroid.[0]}}&size=105x110&sensor=false&fov=45" />
-                        {{else}}
-                            <img src="http://maps.googleapis.com/maps/api/streetview?location={{feature.geometry.coordinates.[1]}},{{feature.geometry.coordinates.[0]}}&size=105x110&sensor=false&fov=45" />
-                        {{/if}}
-                    </div>
+            <div class="popup-streetview">
+                <div>
+                    {{#if feature.properties.centroid}}
+                        <img src="http://maps.googleapis.com/maps/api/streetview?location={{feature.properties.centroid.[1]}},{{feature.properties.centroid.[0]}}&size=250x110&sensor=false&fov=45" />
+                    {{else}}
+                        <img src="http://maps.googleapis.com/maps/api/streetview?location={{feature.geometry.coordinates.[1]}},{{feature.geometry.coordinates.[0]}}&size=250x110&sensor=false&fov=45" />
+                    {{/if}}
                 </div>
-                <div class="popup-lot-details col-xs-6">
+            </div>
+            <div class="popup-lot-details row">
+                <div class="col-xs-9">
                     {{#if feature.properties.number_of_lots_plural}}
                         <div class="lot-count">
                             {{feature.properties.number_of_lots}}
@@ -27,10 +27,9 @@
                     {{/if}}
                     <div class="size">Size: {{feature.properties.size}} acres</div>
                     <div class="owner">Owner: {{feature.properties.owner}}</div>
-                    <!--
-                        <div class="recent-activity">Someone just posted a note</div>
-                    -->
-                    <a target="_blank" href="{{detailUrl}}" class="btn btn-default">learn more</a>
+                </div>
+                <div class="col-xs-3">
+                    <a target="_blank" href="{{detailUrl}}" class="btn btn-learn-more">learn<br />more</a>
                 </div>
             </div>
         </section>
