--- a/livinglotsla/templates/livinglots/lots/map.html
+++ b/livinglotsla/templates/livinglots/lots/map.html
@@ -1,4 +1,4 @@
-{% load blog_widgets feincms_tags i18n inplace_tags static %}
+{% load feincms_tags i18n inplace_tags static %}
 
 <script id="popup-template" type="text/x-handlebars-template">
     {% verbatim %}
