--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -18,6 +18,9 @@ a {
   color: black;
 }
 /* Header */
+header {
+  background-color: white;
+}
 header .row {
   margin: 0;
 }
@@ -69,6 +72,7 @@ header .row {
 }
 /* Footer */
 footer {
+  background-color: white;
   bottom: 0;
   position: fixed;
   width: 100%;
