--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -24,6 +24,10 @@ a {
 
 /* Header */
 
+header {
+    background-color: white;
+}
+
 header .row {
     margin: 0;
 }
@@ -85,6 +89,7 @@ header .row {
 /* Footer */
 
 footer {
+    background-color: white;
     bottom: 0;
     position: fixed;
     width: 100%;
