--- a/livinglotsla/static/css/base.css
+++ b/livinglotsla/static/css/base.css
@@ -127,6 +127,12 @@ footer .row {
 /*
  * Pages
  */
+.blog-entry-list img {
+  height: auto;
+  max-width: 100%;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
 .map-page #map {
   width: 100%;
   height: 1000px;
