--- a/livinglotsla/static/css/pages/blog.less
+++ b/livinglotsla/static/css/pages/blog.less
@@ -1,6 +1,21 @@
-.blog-entry-list img {
-    height: auto;
-    max-width: 100%;
-    margin-bottom: 15px;
-    margin-top: 15px;
+.blog-entry-list {
+    h2 {
+        font-size: 22px;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    .meta {
+        color: gray;
+        font-size: 12px;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    img {
+        height: auto;
+        max-width: 100%;
+        margin-bottom: 15px;
+        margin-top: 15px;
+    }
 }
