--- a/livinglotsla/templates/_header.html
+++ b/livinglotsla/templates/_header.html
@@ -7,7 +7,9 @@
 
     <div class="header-home-link">
         <a href="/">
-            <h1>{% trans "LA Open Acres" %}</h1>
+            <h1>
+                <img alt="{% trans "LA Open Acres" %}" src="{% static "img/logo.png" %}" />
+            </h1>
         </a>
     </div>
 
