--- a/livinglotsla/templates/_footer.html
+++ b/livinglotsla/templates/_footer.html
@@ -18,7 +18,15 @@
                 </div>
 
                 <div class="footer-social col-md-3">
-                    social
+                    <ul>
+                        <li>
+                            <a href="https://www.facebook.com/CommunityHealthCouncils" class="social social-fb"></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/chcinc/" class="social social-twitter"></a>
+                        </li>
+                    </ul>
+                    <div class="clearfix"></div>
                 </div>
 
             </div>
