--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -119,6 +119,8 @@ footer {
     }
 
     &-subscribe {
+        line-height: 27px;
+
         input {
             border: 0;
             width: 100%;
