--- a/livinglotsla/templates/_footer.html
+++ b/livinglotsla/templates/_footer.html
@@ -14,7 +14,10 @@
                 </div>
 
                 <div class="footer-subscribe col-md-3">
-                    <input type="email" placeholder="{% trans "subscribe" %}" />
+                    <form action="http://laopenacres.us7.list-manage2.com/subscribe/post?u=e1b2a93e34ac7e27fc741aaf8&amp;id=645ab10bfb" method="post" target="_blank">
+                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" data-cip-id="mce-EMAIL" placeholder="{% trans "subscribe" %}">
+                        <input style="background: none; float: right; width: 0; height: 0;" type="submit" />
+                    </form>
                 </div>
 
                 <div class="footer-social col-md-3">
