Use Bootstrap Less files

--- a/livinglotsla/static/css/base.less
+++ b/livinglotsla/static/css/base.less
@@ -1,5 +1,12 @@
 @frame-border: 1px solid #aaa;
 
+
+/*
+ * Import library Less files
+ */
+
+@import "bootstrap.less";
+
 /*
  * Global properties
  */
