--- a/livinglotsla/static/css/pages/blog.less
+++ b/livinglotsla/static/css/pages/blog.less
@@ -1,7 +1,16 @@
 .blog-entry-list {
-    h2 {
-        font-size: 22px;
+    article {
+        .make-row();
+        .make-md-column(10);
+        margin-bottom: 50px;
+    }
+
+    h2,
+    h2 a {
+        font-size: 20px;
         font-weight: bold;
+        margin-bottom: 5px;
+        margin-top: 0;
         text-transform: uppercase;
     }
 
@@ -9,6 +18,7 @@
         color: gray;
         font-size: 12px;
         font-weight: bold;
+        margin-bottom: 15px;
         text-transform: uppercase;
     }
 
@@ -16,6 +26,16 @@
         height: auto;
         max-width: 100%;
         margin-bottom: 15px;
-        margin-top: 15px;
+        margin-top: 0;
+    }
+}
+
+.blog-entry {
+    &-summary {
+        .make-md-column(8);
+    }
+
+    &-cover-image {
+        .make-md-column(4);
     }
 }
