--- a/livinglotsla/templates/404.html
+++ b/livinglotsla/templates/404.html
@@ -4,6 +4,8 @@
 
 {% block content %}
     {% blocktrans %}
-        We couldn't find the page you're trying to access. Please contact us at <a href="mailto:TODO">TODO</a> if you think this is incorrect.
+        We couldn't find the page you're trying to access. Please contact us at 
+        <a href="mailto:admin@laopenacres.org">admin@laopenacres.org</a>
+        if you think this is incorrect.
     {% endblocktrans %}
 {% endblock %}
