--- a/livinglotsla/templates/500.html
+++ b/livinglotsla/templates/500.html
@@ -4,6 +4,8 @@
 
 {% block content %}
     {% blocktrans %}
-        Oops! An error occurred. Please contact us at <a href="mailto:TODO">TODO</a> if this keeps happening.
+        Oops! An error occurred. Please contact us at 
+        <a href="mailto:admin@laopenacres.org">admin@laopenacres.org</a>
+        if this keeps happening.
     {% endblocktrans %}
 {% endblock %}
